fixed dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,22 @@
 @import './variables.scss';
 
 body {
-  padding: 34px;
-  background-color: var(--color-page-background);
-  color: var(--color-text);
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+
   font: 400 24px Helvetica;
   line-height: 32px;
 }
 
 .App {
-  max-width: 1000px;
+  position: absolute;
+  left: 0;
+  width: 100vw;
+  top: 0;
+  height: 100vh;
+  background-color: var(--color-page-background);
+  color: var(--color-text);
   margin: auto;
   text-align: center;
 }
