--- a/src/components/Setting.scss
+++ b/src/components/Setting.scss
@@ -7,7 +7,7 @@
     width: 1em;
     height: 1em;
     border-radius:3px;
-    border: 1px solid black;
+    border: 1px solid var(--color-text);
     margin:0 0.5em;
   
     .Check {
