--- a/src/pages/Play.scss
+++ b/src/pages/Play.scss
@@ -27,7 +27,7 @@
     top: 0;
     right: 0;
     bottom: 50%;
-    background-color: var(--color-brand-dark);
+    background-color: var(--color-primary);
   }
 
   .TopHalf {
