--- a/src/partials/Nav.scss
+++ b/src/partials/Nav.scss
@@ -7,7 +7,7 @@
     top:0;
     left: 0;
     right: 0;
-    background-color: var(--color-brand-dark);
+    background-color: var(--color-secondary);
   }
 
   .Logo {
